recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:1: error: Missing closing brace `}' assumed here
override def tree(steps:Int, length:Double, angle:Double, shrink:Double)    { steps match {
^Tree:1: error: expected start of definition
override def tree(steps:Int, length:Double, angle:Double, shrink:Double)    { steps match {
         ^